--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             <li class="nav-item">
               <a class="nav-link" href="community_raps.html">Community Raps</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">My Raps</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="my_raps.html">My Raps</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="register.html">Register</a>
             </li>
